overflow x solved

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -35,6 +35,7 @@ a {
 html {
     font-family: 'Space Mono', monospace;
     color: $textPrimaryColor;
+    overflow-x: hidden;
 }
 
 body {
